--- a/blocks/quote/quote.css
+++ b/blocks/quote/quote.css
@@ -28,3 +28,10 @@
     width: 30px;
     background-color: darkgray;
 }
+
+.block.quote.bg-red { 
+    background-color: #f87171; 
+}
+.block.quote.bg-green { background-color: #34d399; }
+.block.quote.bg-blue { background-color: #60a5fa; }
+
