--- a/blocks/quote/quote.css
+++ b/blocks/quote/quote.css
@@ -29,9 +29,14 @@
     background-color: darkgray;
 }
 
-.block.quote.bg-red { 
-    background-color: #f87171; 
+.block.quote.bg-red {
+    background-color: #f87171;
 }
-.block.quote.bg-green { background-color: #34d399; }
-.block.quote.bg-blue { background-color: #60a5fa; }
 
+.block.quote.bg-green {
+    background-color: #34d399;
+}
+
+.block.quote.bg-blue {
+    background-color: #60a5fa;
+}
