--- a/blocks/cards-carousel/cards-carousel.css
+++ b/blocks/cards-carousel/cards-carousel.css
@@ -1,3 +1,6 @@
+.cards-carousel-container {
+    margin: -70px auto 0 auto !important;
+}
 .cards-carousel {
     position: relative;
     display: flex;
