--- a/styles/styles.css
+++ b/styles/styles.css
@@ -401,7 +401,7 @@ main > .section > div {
 }
 
 main > .section:first-of-type {
-    margin-top: 0;
+    margin-top: 50px;
 }
 
 @media (min-width: 900px) {
