feat(component):Full Width Compact Banner With Cards Carousel model,definition and filters initialized

--- a/blocks/cards-carousel/cards-carousel.css
+++ b/blocks/cards-carousel/cards-carousel.css
@@ -1,6 +1,7 @@
 .cards-carousel-container {
-    margin: -70px auto 0 auto !important;
+    margin: -70px auto 0 !important;
 }
+
 .cards-carousel {
     position: relative;
     display: flex;
