--- a/blocks/full-width-compact-banner-with-buttons/full-width-compact-banner-with-buttons.css
+++ b/blocks/full-width-compact-banner-with-buttons/full-width-compact-banner-with-buttons.css
@@ -2,6 +2,7 @@
     border-top: 10px !important;
     border-bottom: 0 !important;
 }
+
 .fwcb {
     position: relative;
     overflow: hidden;
@@ -53,7 +54,7 @@
 }
 
 .fwcb-badge {
-    background: #ffffff;
+    background: #fff;
     color: #cc0058;
     font-weight: 700;
     padding: 4px;
@@ -110,9 +111,9 @@
 
 .fwcb-button:hover,
 .fwcb-button:focus-visible {
-    background: #000000;
-    color: #ffffff !important;
-    border-color: #ffffff;
+    background: #000;
+    color: #fff !important;
+    border-color: #fff;
     text-decoration: none !important;
 }
 
