feat(styles) fwcbwcc text and button styles applied based on color pallet dominanse

--- a/blocks/cards-carousel/cards-carousel.css
+++ b/blocks/cards-carousel/cards-carousel.css
@@ -14,7 +14,8 @@
     overflow-x: auto;
     scroll-snap-type: x proximity;
     scroll-behavior: smooth;
-    padding: 8px 0;
+
+    /* padding: 8px 0; */
     width: 100%;
     cursor: grab;
 }
