fix(styles): fwcbwcc cards carousel next and prev cards buttons deleted

--- a/blocks/full-width-compact-banner-with-cards-carousel/full-width-compact-banner-with-cards-carousel.css
+++ b/blocks/full-width-compact-banner-with-cards-carousel/full-width-compact-banner-with-cards-carousel.css
@@ -50,6 +50,10 @@
     max-width: 380px;
 }
 
+.fwcbwcc-carousel-slot {
+    max-width: 1200px;
+}
+
 .fwcbwcc-badge {
     align-self: flex-start;
     background: var(--fwcbwcc-badge-bg);
