--- a/blocks/main-banner/main-banner.css
+++ b/blocks/main-banner/main-banner.css
@@ -1,7 +1,5 @@
 .main-banner {
     position: relative;
-    overflow: hidden;
-    background-color: #0f172a;
     color: #fff;
     min-height: 360px;
     display: flex;
@@ -15,8 +13,8 @@
     width: 100%;
     height: 100%;
     color: inherit;
-    text-decoration: none;
     cursor: pointer;
+    text-decoration: none !important;
 }
 
 .main-banner__image {
@@ -27,8 +25,8 @@
 
 .main-banner__image img {
     width: 100%;
-    height: 100%;
-    object-fit: cover;
+    min-height: 100%;
+    object-fit: contain;
     display: block;
 }
 
@@ -36,24 +34,29 @@
     position: relative;
     max-width: 640px;
     z-index: 1;
-    display: grid;
-    gap: 12px;
+    left: 5%;
 }
 
 .main-banner__title {
     margin: 0;
-    font-size: 2rem;
     line-height: 1.2;
+    max-width: clamp(45rem, 35.19vi + 3.33rem, 54rem);
+    font-size: clamp(2.4rem, 2.98vi + -0.27rem, 4rem);
+    font-weight: bold;
 }
 
 .main-banner__description {
-    margin: 0;
-    color: rgb(255 255 255 / 90%);
+    color: #fff;
     line-height: 1.5;
+    max-width: 400px;
+    font-size: 2rem;
+    margin-top: 1rem !important;
+    margin-bottom: 2rem !important;
 }
 
 .main-banner__cta {
-    display: inline-flex;
+    max-width: fit-content;
+    display: block;
     align-items: center;
     justify-content: center;
     gap: 8px;
